--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-aaaaaaaaaa
-bbbbbb
-ccccc
-ddd
-eee
+<div>
+    <p>おすすめタイトル</p>
+</div>
+<div>
+    <p>デラックス画像</p>
+    <p>グルメフェス画像</p>
+    <p>ディスカバリー画像</p>
+</div>
+<div>
+    <div>
+        <p>タイトルをすべてみる！</p>
+        <p>カービィ画像</p>
+    </div>
+</div>
 </body>
 </html>
