--- a/kirby.html
+++ b/kirby.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./kirby.css">
 </head>
 <body>
 
@@ -15,15 +15,15 @@
 </div>
 
 <div>
-    <p><img src="./img/01.jpg" alt="カービィファイターズ2"></p>
-    <p><img src="./img/02.jpg" alt="星のカービィ　スターアライズ"></p>
-    <p><img src="./img/03.jpg" alt="星のカービィ　ディスカバリー"></p>
+    <p><img src="./img/01.jpg" alt="カービィファイターズ"></p>
+    <p><img src="./img/02.jpg" alt="星のカービィスターアライズ"></p>
+    <p><img src="./img/03.jpg" alt="星のカービィディスカバリー"></p>
 </div>
 
 <div>
     <div class="link-button">
-<!--        <p><img src="./img/historyBtn-deco.png" alt=""></p>-->
-        <p>タイトルをすべてみる！</p>
+<!--        <p><img src="" alt=""></p>-->
+        <p>タイトルをすべて見る！</p>
     </div>
 </div>
 
