--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p class="title"><img src="./img/title-top-titles.png" alt="おすすめタイトル"></p>
 </div>
 
-<div>
+<div class="container">
     <p><img src="./img/01.jpg" alt="カービィファイターズ2"></p>
     <p><img src="./img/02.jpg" alt="星のカービィ　スターアライズ"></p>
     <p><img src="./img/03.jpg" alt="星のカービィ　ディスカバリー"></p>
@@ -22,7 +22,7 @@
 
 <div>
     <div class="link-button">
-<!--        <p><img src="./img/historyBtn-deco.png" alt=""></p>-->
+        <p class="button-kirby"><img src="./img/historyBtn-deco.png" alt=""></p>
         <p>タイトルをすべてみる！</p>
     </div>
 </div>
