--- a/kirby.html
+++ b/kirby.html
@@ -14,7 +14,7 @@
     <p class="title"><img src="./img/title-top-titles.png" alt="おすすめタイトル"></p>
 </div>
 
-<div>
+<div class="container">
     <p><img src="./img/01.jpg" alt="カービィファイターズ"></p>
     <p><img src="./img/02.jpg" alt="星のカービィスターアライズ"></p>
     <p><img src="./img/03.jpg" alt="星のカービィディスカバリー"></p>
@@ -22,8 +22,8 @@
 
 <div>
     <div class="link-button">
-<!--        <p><img src="" alt=""></p>-->
-        <p>タイトルをすべて見る！</p>
+        <p class="button-kirby"><img src="./img/historyBtn-deco.png" alt=""></p>
+        <p>タイトルをすべてみる！</p>
     </div>
 </div>
 
