--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 </div>
 
 <div>
-    <div class="link-button">
+    <a href="https://google.com" class="link-button">
         <p class="button-kirby"><img src="./img/historyBtn-deco.png" alt=""></p>
         <p>タイトルをすべてみる！</p>
-    </div>
+    </a>
 </div>
 
 </body>
