--- a/testsite/index.html
+++ b/testsite/index.html
@@ -12,7 +12,9 @@
 <body>
 
 <div>
-    <p class="header-logo"><img src="./assets/img/logo.png" alt="Sky Coffee"></p>
+    <a href="./index.html">
+        <p class="header-logo"><img src="./assets/img/logo.png" alt="Sky Coffee"></p>
+    </a>
 </div>
 
 <div>
@@ -21,9 +23,15 @@
 
 <div>
     <div class="menu">
-        <p>menu</p>
-        <p>blog</p>
-        <p>access</p>
+        <a href="https://www.google.com/">
+            <p>menu</p>
+        </a>
+        <a href="https://www.google.com/">
+            <p>blog</p>
+        </a>
+        <a href="https://www.google.com/">
+            <p>access</p>
+        </a>
     </div>
 </div>
 
@@ -35,7 +43,7 @@
         <div class="concept-text">
             <p>Concept</p>
             <h1>心静かにコーヒーを</h1>
-            <p>立ち止まって、<br>空の青さを眺めて、<br>一息つきましょう</p>
+            <p class="concept-sentence">立ち止まって、<br>空の青さを眺めて、<br>一息つきましょう</p>
         </div>
     </div>
 
@@ -46,52 +54,68 @@
         </div>
 
         <div class="blog-contents">
+
             <div>
-                <p><img src="./assets/img/thumbnail01.jpg" alt="コーヒーカー"></p>
-                <p class="title">コーヒーカー始めました。</p>
-                <p class="blog-date">2030.08.08</p>
+                <a href="https://www.google.com/">
+                    <p><img src="./assets/img/thumbnail01.jpg" alt="コーヒーカー"></p>
+                    <p class="title">コーヒーカー始めました。</p>
+                    <p class="blog-date">2030.08.08</p>
+                </a>
             </div>
 
             <div>
-                <p><img src="./assets/img/thumbnail02.jpg" alt="濃厚クリーミーなミルク"></p>
-                <p class="title">濃厚クリーミーなミルクをどうぞ</p>
-                <p class="blog-date">2030.08.05</p>
+                <a href="https://www.google.com/">
+                    <p><img src="./assets/img/thumbnail02.jpg" alt="濃厚クリーミーなミルク"></p>
+                    <p class="title">濃厚クリーミーなミルクをどうぞ</p>
+                    <p class="blog-date">2030.08.05</p>
+                </a>
             </div>
 
             <div>
-                <p><img src="./assets/img/thumbnail03.jpg" alt="オリジナル曲"></p>
-                <p class="title">Sky Coffeeのオリジナル曲が完成！無料ダウンロード可能です。</p>
-                <p class="blog-date">2030.08.02</p>
+                <a href="https://www.google.com/">
+                    <p><img src="./assets/img/thumbnail03.jpg" alt="オリジナル曲"></p>
+                    <p class="title">Sky Coffeeのオリジナル曲が完成！無料ダウンロード可能です。</p>
+                    <p class="blog-date">2030.08.02</p>
+                </a>
             </div>
 
             <div>
-                <p><img src="./assets/img/thumbnail04.jpg" alt="山"></p>
-                <p class="title">ハイキング用のコーヒーを販売中です。</p>
-                <p class="blog-date">2030.07.28</p>
+                <a href="https://www.google.com/">
+                    <p><img src="./assets/img/thumbnail04.jpg" alt="山"></p>
+                    <p class="title">ハイキング用のコーヒーを販売中です。</p>
+                    <p class="blog-date">2030.07.28</p>
+                </a>
             </div>
 
             <div>
-                <p><img src="./assets/img/thumbnail05.jpg" alt="マーブル"></p>
-                <p class="title">ショップの壁を塗ってみました。</p>
-                <p class="blog-date">2030.07.27</p>
+                <a href="https://www.google.com/">
+                    <p><img src="./assets/img/thumbnail05.jpg" alt="マーブル"></p>
+                    <p class="title">ショップの壁を塗ってみました。</p>
+                    <p class="blog-date">2030.07.27</p>
+                </a>
             </div>
 
             <div>
-                <p><img src="./assets/img/thumbnail06.jpg" alt="コーヒー"></p>
-                <p class="title">ブログをはじめました。</p>
-                <p class="blog-date">2030.07.26</p>
+                <a href="https://www.google.com/">
+                    <p><img src="./assets/img/thumbnail06.jpg" alt="コーヒー"></p>
+                    <p class="title">ブログをはじめました。</p>
+                    <p class="blog-date">2030.07.26</p>
+                </a>
             </div>
-
         </div>
 
-        <div class="blog-bottom">
-            <p>ブログ一覧</p>
-            <p class="triangle"></p>
+        <div class="blog-button">
+            <a href="https://www.google.com/">
+                <p>ブログ一覧</p>
+            </a>
         </div>
+
     </div>
 </div>
 <div class="footer">
-    <p class="footer-logo"><img src="./assets/img/logo-white.png" alt="Sky Coffee"></p>
+    <a href="./index.html">
+        <p class="footer-logo"><img src="./assets/img/logo-white.png" alt="Sky Coffee"></p>
+    </a>
     <p>©Sky Coffee</p>
 </div>
 
