--- a/testsite/index.html
+++ b/testsite/index.html
@@ -47,6 +47,7 @@
         </div>
     </div>
 
+
     <div class="blog">
         <div class="blog-title">
             <h1>Blog</h1>
@@ -57,7 +58,7 @@
 
             <div>
                 <a href="https://www.google.com/">
-                    <p><img src="./assets/img/thumbnail01.jpg" alt="コーヒーカー"></p>
+                    <p class="thumbnail"><img src="./assets/img/thumbnail01.jpg" alt="コーヒーカー"></p>
                     <p class="title">コーヒーカー始めました。</p>
                     <p class="blog-date">2030.08.08</p>
                 </a>
@@ -65,7 +66,7 @@
 
             <div>
                 <a href="https://www.google.com/">
-                    <p><img src="./assets/img/thumbnail02.jpg" alt="濃厚クリーミーなミルク"></p>
+                    <p class="thumbnail"><img src="./assets/img/thumbnail02.jpg" alt="濃厚クリーミーなミルク"></p>
                     <p class="title">濃厚クリーミーなミルクをどうぞ</p>
                     <p class="blog-date">2030.08.05</p>
                 </a>
@@ -73,7 +74,7 @@
 
             <div>
                 <a href="https://www.google.com/">
-                    <p><img src="./assets/img/thumbnail03.jpg" alt="オリジナル曲"></p>
+                    <p class="thumbnail"><img src="./assets/img/thumbnail03.jpg" alt="オリジナル曲"></p>
                     <p class="title">Sky Coffeeのオリジナル曲が完成！無料ダウンロード可能です。</p>
                     <p class="blog-date">2030.08.02</p>
                 </a>
@@ -81,7 +82,7 @@
 
             <div>
                 <a href="https://www.google.com/">
-                    <p><img src="./assets/img/thumbnail04.jpg" alt="山"></p>
+                    <p class="thumbnail"><img src="./assets/img/thumbnail04.jpg" alt="山"></p>
                     <p class="title">ハイキング用のコーヒーを販売中です。</p>
                     <p class="blog-date">2030.07.28</p>
                 </a>
@@ -89,7 +90,7 @@
 
             <div>
                 <a href="https://www.google.com/">
-                    <p><img src="./assets/img/thumbnail05.jpg" alt="マーブル"></p>
+                    <p class="thumbnail"><img src="./assets/img/thumbnail05.jpg" alt="マーブル"></p>
                     <p class="title">ショップの壁を塗ってみました。</p>
                     <p class="blog-date">2030.07.27</p>
                 </a>
@@ -97,7 +98,7 @@
 
             <div>
                 <a href="https://www.google.com/">
-                    <p><img src="./assets/img/thumbnail06.jpg" alt="コーヒー"></p>
+                    <p class="thumbnail"><img src="./assets/img/thumbnail06.jpg" alt="コーヒー"></p>
                     <p class="title">ブログをはじめました。</p>
                     <p class="blog-date">2030.07.26</p>
                 </a>
@@ -109,15 +110,16 @@
                 <p>ブログ一覧</p>
             </a>
         </div>
+    </div>
 
+    <div class="footer">
+        <p class="footer-logo">
+            <a href="./index.html">
+                <img src="./assets/img/logo-white.png" alt="Sky Coffee">
+            </a>
+        </p>
+        <p>©Sky Coffee</p>
     </div>
 </div>
-<div class="footer">
-    <a href="./index.html">
-        <p class="footer-logo"><img src="./assets/img/logo-white.png" alt="Sky Coffee"></p>
-    </a>
-    <p>©Sky Coffee</p>
-</div>
-
 </body>
 </html>
