--- a/kirby.html
+++ b/kirby.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./kirby.css">
+    <script
+            src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+            integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+            crossorigin="anonymous" defer></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
 
@@ -23,7 +28,7 @@
 <div>
     <a href="https://google.com" class="link-button">
         <p class="button-kirby"><img src="./img/historyBtn-deco.png" alt=""></p>
-        <p>タイトルをすべてみる！</p>
+        <p id="button-text">タイトルをすべてみる！</p>
     </a>
 </div>
 
