--- a/startsite/index.html
+++ b/startsite/index.html
@@ -36,7 +36,7 @@
             ニュース
         </div>
 
-        <div>
+        <div class="news-contents">
             <div class="news-head">
                 <p>2030.02.10</p>
                 <p>コーポレートサイトをリニューアルしました。</p>
