--- a/kirby.html
+++ b/kirby.html
@@ -27,7 +27,7 @@
 
 <div>
     <a href="https://google.com" class="link-button">
-        <p class="button-kirby"><img src="./img/historyBtn-deco.png" alt=""></p>
+        <p class="button-kirby"><img src="./img/historyBtn-deco.png" alt="カービィ"></p>
         <p id="button-text">タイトルをすべてみる！</p>
     </a>
 </div>
