--- a/startsite/index.html
+++ b/startsite/index.html
@@ -10,122 +10,84 @@
 </head>
 
 <body>
-<div class="header">
+<header class="header">
     <div class="header-logo">
         <a href="./index.html">
             <img src="./assets/img/logo.png" alt="start">
         </a>
     </div>
     <div class="header-menu">
-        <a class="home-link" href="https://google.com">ホーム</a>
-        <a href="https://google.com">メッセージ</a>
-        <a href="https://google.com">会社概要</a>
+        <a class="header-item current" href="https://google.com">ホーム</a>
+        <a class="header-item" href="https://google.com">メッセージ</a>
+        <a class="header-item" href="https://google.com">会社概要</a>
     </div>
-</div>
+</header>
 
-<div class="top">
-    <div class="top-text">
-        <p class="top-title">START</p>
-        <p>仕事に最高のスタートを。</p>
-    </div>
-</div>
+<main>
+    <section class="top">
+        <h1 class="top-title">START</h1>
+        <p class="top-text">仕事に最高のスタートを。</p>
+    </section>
 
-<div class="main">
-    <div class="news">
-        <div class="contents-title">
-            ニュース
-        </div>
+    <section class="news contents-width">
+        <h2 class="contents-title">ニュース</h2>
 
-        <div class="news-contents">
-            <div class="news-head">
+        <div class="news-head">
+            <div class="news-content">
                 <p>2030.02.10</p>
                 <p>コーポレートサイトをリニューアルしました。</p>
             </div>
-            <div class="news-head">
+            <div class="news-content">
                 <p>2030.02.08</p>
                 <p>採用を強化中です！一緒に働きませんか？</p>
             </div>
-            <div class="news-head">
+            <div class="news-content">
                 <p>2030.02.02</p>
-                <p>人材紹介SNS『スタート』をリリースしました。3/31まで新規登録キャンペーンを開催中です！サービス内で使える500ポイントをプレゼント！</p>
+                <p>人材紹介SNS『スタート』をリリースしました。
+                    3/31まで新規登録キャンペーンを開催中です！
+                    サービス内で使える500ポイントをプレゼント！
+                </p>
             </div>
-
         </div>
-    </div>
+    </section>
 
-    <div class="service">
+    <section class="service contents-width">
         <div class="service-title">
-            <div class="contents-title">サービス</div>
-            <div class="service-shadow">SERVICE</div>
+            <h2 class="contents-title">サービス</h2>
+            <p class="service-shadow">SERVICE</p>
         </div>
-        <div class="service-contents">
-            <div class="service-box">
-                <div class="service-inbox">
-                    <div>
-                        <img class="service-img" src="./assets/img/work_black_24dp.png" alt="bag">
-                    </div>
-                    <div class="service-heading">
-                        人材紹介業
-                    </div>
-                    <div class="service-text">
-                        新規サイトの制作はもちろんサイトリニューアルやランディングページの制作も可能です。
-                    </div>
-                </div>
+
+        <div class="service-box">
+            <div class="service-inbox">
+                <img class="service-img" src="./assets/img/work_black_24dp.png" alt="bag">
+                <h3 class="service-heading">人材紹介業</h3>
+                <p class="service-text">新規サイトの制作はもちろん
+                    サイトリニューアルやランディングページの制作も可能です。</p>
             </div>
 
-            <div class="service-box">
-                <div class="service-inbox">
-                    <div>
-                        <img class="service-img" src="./assets/img/location_city_black_24dp.png" alt="office">
-                    </div>
-                    <div class="service-heading">
-                        スクール事業
-                    </div>
-                    <div class="service-text">
-                        オンラインでWeb制作を学べるスクールを運営しています。
-                    </div>
-                </div>
+            <div class="service-inbox">
+                <img class="service-img" src="./assets/img/location_city_black_24dp.png" alt="office">
+                <h3 class="service-heading">スクール事業</h3>
+                <p class="service-text">オンラインでWeb制作を学べるスクールを運営しています。</p>
             </div>
 
-            <div class="service-box">
-                <div class="service-inbox">
-                    <div>
-                        <img class="service-img" src="./assets/img/desktop_windows_24dp.png" alt="pc">
-                    </div>
-                    <div class="service-heading">
-                        Webメディア運営
-                    </div>
-                    <div class="service-text">
-                        人事系メディアやWebデザイン関連のメディアなどを複数運営しています。
-                    </div>
-                </div>
+            <div class="service-inbox">
+                <img class="service-img" src="./assets/img/desktop_windows_24dp.png" alt="pc">
+                <h3 class="service-heading">Webメディア運営</h3>
+                <p class="service-text">人事系メディアやWebデザイン関連のメディアなどを複数運営しています。</p>
             </div>
-
         </div>
+    </section>
+</main>
+
+<footer class="footer">
+    <div class="footer-menu">
+        <a class="footer-link" href="https://google.com">ホーム</a>
+        <a class="footer-link" href="https://google.com">メッセージ</a>
+        <a class="footer-link" href="https://google.com">会社概要</a>
     </div>
-</div>
-
-<div class="footer">
-    <div class="footer-inbox">
-        <div class="footer-menu">
-            <div>
-                <a class="footer-link" href="https://google.com">ホーム</a>
-            </div>
-            <div>
-                <a class="footer-link" href="https://google.com">メッセージ</a>
-            </div>
-            <div>
-                <a class="footer-link" href="https://google.com">会社概要</a>
-            </div>
-        </div>
-        <div>
-            <div>
-                ©START
-            </div>
-        </div>
-
-    </div>
-</div>
+    <p>©START</p>
+</footer>
 
 </body>
 </html>
