--- a/startsite/message.html
+++ b/startsite/message.html
@@ -10,34 +10,29 @@
 </head>
 
 <body>
-<div class="header">
+<header class="header">
     <div class="header-logo">
         <a href="./index.html">
             <img src="./assets/img/logo.png" alt="start">
         </a>
     </div>
     <div class="header-menu">
-        <a class="home-link" href="https://google.com">ホーム</a>
-        <a href="https://google.com">メッセージ</a>
-        <a href="https://google.com">会社概要</a>
+        <a class="header-item" href="https://google.com">ホーム</a>
+        <a class="header-item current" href="https://google.com">メッセージ</a>
+        <a class="header-item" href="https://google.com">会社概要</a>
     </div>
-</div>
+</header>
 
-<div class="message-top">
-    <p class="message-title">メッセージ</p>
-</div>
+<main>
+    <section>
+    <h1 class="banner">メッセージ</h1>
+    </section>
+    <section class="message-box">
+        <h2 class="message-catch">「仕事」をきっかけに<br>人生の新しいスタートを！</h2>
+        <p class="message-explain">大事なお仕事探しを応援させてください</p>
+    </section>
 
-<div>
-    <div class="message-box">
-        <p class="message-catch">
-            「仕事」をきっかけに<br>人生の新しいスタートを！
-        </p>
-        <p class="message-explain">
-            大事なお仕事探しを応援させてください
-        </p>
-    </div>
-
-    <div class="message">
+    <section class="message message-width">
         <div class="ceo-box">
             <figure class="ceo-icon"><img src="./assets/img/ceo.png" alt="ceo"></figure>
 
@@ -57,34 +52,21 @@
                 も随時開講しています。
             </p>
         </div>
-    </div>
+    </section>
 
-    <div class="office">
+    <section class="office message-width">
         <img src="./assets/img/office.png" alt="office">
-    </div>
-</div>
+    </section>
+</main>
 
-<div class="footer">
-    <div class="footer-inbox">
-        <div class="footer-menu">
-            <div>
-                <a class="footer-link" href="https://google.com">ホーム</a>
-            </div>
-            <div>
-                <a class="footer-link" href="https://google.com">メッセージ</a>
-            </div>
-            <div>
-                <a class="footer-link" href="https://google.com">会社概要</a>
-            </div>
-        </div>
-        <div>
-            <div>
-                ©START
-            </div>
-        </div>
-
+<footer class="footer">
+    <div class="footer-menu">
+        <a class="footer-link" href="https://google.com">ホーム</a>
+        <a class="footer-link" href="https://google.com">メッセージ</a>
+        <a class="footer-link" href="https://google.com">会社概要</a>
     </div>
-</div>
+    <p>©START</p>
+</footer>
 
 </body>
 </html>
