--- a/testsite/index.html
+++ b/testsite/index.html
@@ -37,7 +37,7 @@
 
 
 <div class="concept">
-    <div class="contents">
+    <div class="contents contents-flex">
         <p><img src="./assets/img/concept.jpg" alt="concept"></p>
 
         <div class="concept-text">
@@ -48,8 +48,9 @@
     </div>
 </div>
 
-<div class="contents">
+
 <div class="blog">
+    <div class="contents">
         <div class="blog-title">
             <h1>Blog</h1>
             <p>ブログ</p>
