--- a/testsite/index_azami.html
+++ b/testsite/index_azami.html
@@ -1,99 +1,125 @@
 <!doctype html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style_azami.css">
+	<meta charset="UTF-8">
+	<meta name="viewport"
+				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
+	<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
 <div>
-    <p class="header-logo"><img src="./assets/img/logo.png" alt="Sky Coffee"></p>
+	<a href="./index.html">
+		<p class="header-logo"><img src="./assets/img/logo.png" alt="Sky Coffee"></p>
+	</a>
 </div>
 
 <div>
-    <p class="top-img">背景画像</p>
+	<p class="top-img">背景画像</p>
 </div>
 
 <div>
-    <div class="menu">
-        <p>menu</p>
-        <p>blog</p>
-        <p>access</p>
-    </div>
+	<div class="menu">
+		<a href="https://www.google.com/">
+			<p>menu</p>
+		</a>
+		<a href="https://www.google.com/">
+			<p>blog</p>
+		</a>
+		<a href="https://www.google.com/">
+			<p>access</p>
+		</a>
+	</div>
+</div>
+
+
+<div class="concept">
+	<div class="contents content-flex">
+			<p><img src="./assets/img/concept.jpg" alt="concept"></p>
+
+			<div class="concept-text">
+				<p>Concept</p>
+				<h1>心静かにコーヒーを</h1>
+				<p class="concept-sentence">立ち止まって、<br>空の青さを眺めて、<br>一息つきましょう</p>
+		</div>
+	</div>
 </div>
 
 <div class="contents">
-    <div class="concept">
+	<div class="blog">
+		<div class="blog-title">
+			<h1>Blog</h1>
+			<p>ブログ</p>
+		</div>
 
-        <p><img src="./assets/img/concept.jpg" alt="concept"></p>
+		<div class="blog-contents">
+			<div>
+				<a href="https://www.google.com/">
+					<p class="thumbnail"><img src="./assets/img/thumbnail01.jpg" alt="コーヒーカー"></p>
+					<p class="title">コーヒーカー始めました。</p>
+					<p class="blog-date">2030.08.08</p>
+				</a>
+			</div>
 
-        <div class="concept-text">
-            <p>Concept</p>
-            <h1>心静かにコーヒーを</h1>
-            <p>立ち止まって、<br>空の青さを眺めて、<br>一息つきましょう</p>
-        </div>
-    </div>
+			<div>
+				<a href="https://www.google.com/">
+					<p class="thumbnail"><img src="./assets/img/thumbnail02.jpg" alt="濃厚クリーミーなミルク"></p>
+					<p class="title">濃厚クリーミーなミルクをどうぞ</p>
+					<p class="blog-date">2030.08.05</p>
+				</a>
+			</div>
 
-    <div class="blog">
-        <div class="blog-title">
-            <h1>Blog</h1>
-            <p>ブログ</p>
-        </div>
+			<div>
+				<a href="https://www.google.com/">
+					<p class="thumbnail"><img src="./assets/img/thumbnail03.jpg" alt="オリジナル曲"></p>
+					<p class="title">Sky Coffeeのオリジナル曲が完成！無料ダウンロード可能です。</p>
+					<p class="blog-date">2030.08.02</p>
+				</a>
+			</div>
 
-        <div class="blog-contents">
-            <div>
-                <p><img src="./assets/img/thumbnail01.jpg" alt="コーヒーカー"></p>
-                <p class="title">コーヒーカー始めました。</p>
-                <p class="blog-date">2030.08.08</p>
-            </div>
+			<div>
+				<a href="https://www.google.com/">
+					<p class="thumbnail"><img src="./assets/img/thumbnail04.jpg" alt="山"></p>
+					<p class="title">ハイキング用のコーヒーを販売中です。</p>
+					<p class="blog-date">2030.07.28</p>
+				</a>
+			</div>
 
-            <div>
-                <p><img src="./assets/img/thumbnail02.jpg" alt="濃厚クリーミーなミルク"></p>
-                <p class="title">濃厚クリーミーなミルクをどうぞ</p>
-                <p class="blog-date">2030.08.05</p>
-            </div>
+			<div>
+				<a href="https://www.google.com/">
+					<p class="thumbnail"><img src="./assets/img/thumbnail05.jpg" alt="マーブル"></p>
+					<p class="title">ショップの壁を塗ってみました。</p>
+					<p class="blog-date">2030.07.27</p>
+				</a>
+			</div>
 
-            <div>
-                <p><img src="./assets/img/thumbnail03.jpg" alt="オリジナル曲"></p>
-                <p class="title">Sky Coffeeのオリジナル曲が完成！無料ダウンロード可能です。</p>
-                <p class="blog-date">2030.08.02</p>
-            </div>
+			<div>
+				<a href="https://www.google.com/">
+					<p class="thumbnail"><img src="./assets/img/thumbnail06.jpg" alt="コーヒー"></p>
+					<p class="title">ブログをはじめました。</p>
+					<p class="blog-date">2030.07.26</p>
+				</a>
+			</div>
+		</div>
 
-            <div>
-                <p><img src="./assets/img/thumbnail04.jpg" alt="山"></p>
-                <p class="title">ハイキング用のコーヒーを販売中です。</p>
-                <p class="blog-date">2030.07.28</p>
-            </div>
-
-            <div>
-                <p><img src="./assets/img/thumbnail05.jpg" alt="マーブル"></p>
-                <p class="title">ショップの壁を塗ってみました。</p>
-                <p class="blog-date">2030.07.27</p>
-            </div>
-
-            <div>
-                <p><img src="./assets/img/thumbnail06.jpg" alt="コーヒー"></p>
-                <p class="title">ブログをはじめました。</p>
-                <p class="blog-date">2030.07.26</p>
-            </div>
-
-        </div>
-
-        <div class="blog-bottom">
-            <p>ブログ一覧</p>
-<!--            <p class="triangle"></p>-->
-        </div>
-    </div>
+		<div class="blog-button">
+			<a href="https://www.google.com/">
+				<p>ブログ一覧</p>
+			</a>
+		</div>
+	</div>
 </div>
+
 <div class="footer">
-    <p class="footer-logo"><img src="./assets/img/logo-white.png" alt="Sky Coffee"></p>
-    <p>©Sky Coffee</p>
+	<p class="footer-logo">
+		<a href="./index.html">
+			<img src="./assets/img/logo-white.png" alt="Sky Coffee">
+		</a>
+	</p>
+	<p>©Sky Coffee</p>
 </div>
-
 </body>
 </html>
